Product fetch with sorting pagable mapping to a structured response set cursor pagination to paginate